--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,7 @@
-Julien Bigot initial conception and development.
+Multiple people have contributed to Ah5. To show our appreciation for their
+public spirit, we list here in alphabetical order a condensed list of their
+contributions.
+
+Julien Bigot - CEA (julien.bigot@cea.fr)
+* Initial design and implementation
+* Library maintainer
